// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardVerificationAlert renders awaitingId banner 1`] = `
<div>
  <div
    class="
         
        w-full
        bg-colour-warning-bright-light dark:bg-colour-warning-bright-dark 
        sticky top-0 left-0 z-50 px-[1rem] tablet:px-[3.5rem] laptop:px-[6.5rem] py-[1rem] 
        flex flex-col rounded justify-between 
      "
    data-testid="alert"
  >
    <div
      class="flex basis-full flex-row"
      data-testid="alertBanner"
    >
      <div
        class="flex items-start tablet:items-center"
      >
        <div
          class="text-colour-onWarning-container-light dark:text-colour-onWarning-container-dark"
          data-testid="alert-icon"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-triangle-exclamation text-[20px] flex content-start pt-1 tablet:pt-[0px] tablet:text-[24px]"
            data-icon="triangle-exclamation"
            data-prefix="fas"
            data-testid="icon"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480H40c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24V296c0 13.3 10.7 24 24 24s24-10.7 24-24V184c0-13.3-10.7-24-24-24zm32 224a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="tablet:flex tablet:mx-6 ml-4 m-auto w-full"
      >
        <div
          class="flex-col content-center  max-w-[750px] tablet:pr-[16px]"
        >
          <p
            class="w-full text-colour-onSurface-light dark:text-colour-onSurface-dark break-words font-typography-title-small font-typography-title-small-weight text-typography-title-small leading-typography-title-small tracking-typography-title-small tablet:font-typography-title-medium-semibold tablet:font-typography-title-medium-semibold-weight tablet:text-typography-title-medium-semibold tablet:leading-typography-title-medium-semibold tablet:tracking-typography-title-medium-semibold"
          >
            Get your Blue Light Card
          </p>
          <div
            class="flex-col w-full pt-2 font-typography-body-small font-typography-body-small-weight text-typography-body-small leading-typography-body-small tracking-typography-body-small tablet:font-typography-body tablet:font-typography-body-weight tablet:text-typography-body tablet:leading-typography-body tablet:tracking-typography-body text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark break-words"
          >
            Access exclusive offers for the next 2 years for £4.99
          </div>
        </div>
        <div
          class="mt-[0.75rem] tablet:mt-0 tablet:justify-end flex-row ml-auto mr-4 items-center flex justify-start items-start max-w-[250px] text-base w-full"
        >
          <div
            class="h-full flex items-center tablet:ml-auto"
          >
            <a
              class="rounded transition border-1 py-[4px] px-[12px] h-[32px] flex items-center justify-center gap-[8px]  text-button-primary-default-label-colour-light dark:text-button-primary-default-label-colour-dark hover:bg-button-primary-hover-bg-colour-light dark:hover:bg-button-primary-hover-bg-colour-dark hover:text-button-primary-hover-label-colour-light dark:hover:text-button-primary-hover-label-colour-dark focus:outline-[#2EB8E6] dark:focus:outline-[#FFFF00] bg-button-primary-default-bg-colour-light dark:bg-button-primary-default-bg-colour-dark border-none  text-button-label-font font-button-label-font font-button-label-font-weight tracking-button-label-font leading-button-label-font"
              href="/eligibility"
            >
              Get your card
            </a>
          </div>
        </div>
      </div>
      <div
        class="flex items-start  tablet:items-center"
      >
        <button
          aria-label="Close"
          class="content-center text-center rounded-full text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-xmark text-[20px]"
            data-icon="xmark"
            data-prefix="far"
            focusable="false"
            role="img"
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardVerificationAlert renders awaitingIdApproval banner 1`] = `
<div>
  <div
    class="
         
        w-full
        bg-colour-info-bright-light dark:bg-colour-info-bright-dark 
        sticky top-0 left-0 z-50 px-[1rem] tablet:px-[3.5rem] laptop:px-[6.5rem] py-[1rem] 
        flex flex-col rounded justify-between 
      "
    data-testid="alert"
  >
    <div
      class="flex basis-full flex-row"
      data-testid="alertBanner"
    >
      <div
        class="flex items-start tablet:items-center"
      >
        <div
          class="text-colour-onInfo-container-light dark:text-colour-onInfo-container-dark"
          data-testid="alert-icon"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info text-[20px] flex content-start pt-1 tablet:pt-[0px] tablet:text-[24px]"
            data-icon="circle-info"
            data-prefix="fas"
            data-testid="icon"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="tablet:flex tablet:mx-6 ml-4 m-auto w-full"
      >
        <div
          class="flex-col content-center  max-w-[750px] tablet:pr-[16px]"
        >
          <p
            class="w-full text-colour-onSurface-light dark:text-colour-onSurface-dark break-words font-typography-title-small font-typography-title-small-weight text-typography-title-small leading-typography-title-small tracking-typography-title-small tablet:font-typography-title-medium-semibold tablet:font-typography-title-medium-semibold-weight tablet:text-typography-title-medium-semibold tablet:leading-typography-title-medium-semibold tablet:tracking-typography-title-medium-semibold"
          >
            Your eligibility is being verified
          </p>
          <div
            class="flex-col w-full pt-2 font-typography-body-small font-typography-body-small-weight text-typography-body-small leading-typography-body-small tracking-typography-body-small tablet:font-typography-body tablet:font-typography-body-weight tablet:text-typography-body tablet:leading-typography-body tablet:tracking-typography-body text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark break-words"
          >
            You will receive a confirmation email, and your virtual card will be ready shortly
          </div>
        </div>
        <div
          class="mt-[0.75rem] tablet:mt-0 tablet:justify-end flex-row ml-auto mr-4 items-center flex justify-start items-start max-w-[250px] text-base w-full"
        >
          <div
            class="h-full flex items-center tablet:ml-auto"
          >
            <a
              class="rounded transition border-1 h-[32px] flex items-center justify-center gap-[8px]  text-button-tertiary-default-label-colour-light dark:text-button-tertiary-default-label-colour-dark hover:text-button-tertiary-hover-label-colour-light dark:hover:text-button-tertiary-hover-label-colour-dark focus:outline-[#2EB8E6] dark:focus:outline-[#FFFF00]  border-none !px-0 text-button-label-font font-button-label-font font-button-label-font-weight tracking-button-label-font leading-button-label-font"
              href="https://support.bluelightcard.co.uk/hc/en-gb/requests/new"
            >
              Need help?
            </a>
          </div>
        </div>
      </div>
      <div
        class="flex items-start  tablet:items-center"
      >
        <button
          aria-label="Close"
          class="content-center text-center rounded-full text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-xmark text-[20px]"
            data-icon="xmark"
            data-prefix="far"
            focusable="false"
            role="img"
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardVerificationAlert renders rejection banner 1`] = `
<div>
  <div
    class="
         
        w-full
        bg-colour-warning-bright-light dark:bg-colour-warning-bright-dark 
        sticky top-0 left-0 z-50 px-[1rem] tablet:px-[3.5rem] laptop:px-[6.5rem] py-[1rem] 
        flex flex-col rounded justify-between 
      "
    data-testid="alert"
  >
    <div
      class="flex basis-full flex-row"
      data-testid="alertBanner"
    >
      <div
        class="flex items-start tablet:items-center"
      >
        <div
          class="text-colour-onWarning-container-light dark:text-colour-onWarning-container-dark"
          data-testid="alert-icon"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-triangle-exclamation text-[20px] flex content-start pt-1 tablet:pt-[0px] tablet:text-[24px]"
            data-icon="triangle-exclamation"
            data-prefix="fas"
            data-testid="icon"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480H40c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24V296c0 13.3 10.7 24 24 24s24-10.7 24-24V184c0-13.3-10.7-24-24-24zm32 224a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="tablet:flex tablet:mx-6 ml-4 m-auto w-full"
      >
        <div
          class="flex-col content-center  max-w-[750px] tablet:pr-[16px]"
        >
          <p
            class="w-full text-colour-onSurface-light dark:text-colour-onSurface-dark break-words font-typography-title-small font-typography-title-small-weight text-typography-title-small leading-typography-title-small tracking-typography-title-small tablet:font-typography-title-medium-semibold tablet:font-typography-title-medium-semibold-weight tablet:text-typography-title-medium-semibold tablet:leading-typography-title-medium-semibold tablet:tracking-typography-title-medium-semibold"
          >
            Your eligibility proof has been declined
          </p>
          <div
            class="flex-col w-full pt-2 font-typography-body-small font-typography-body-small-weight text-typography-body-small leading-typography-body-small tracking-typography-body-small tablet:font-typography-body tablet:font-typography-body-weight tablet:text-typography-body tablet:leading-typography-body tablet:tracking-typography-body text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark break-words"
          >
            Your image is not clear enough. Provide a valid proof of eligibility.
          </div>
        </div>
        <div
          class="mt-[0.75rem] tablet:mt-0 tablet:justify-end flex-row ml-auto mr-4 items-center flex justify-start items-start max-w-[250px] text-base w-full"
        >
          <div
            class="h-full flex items-center tablet:ml-auto"
          >
            <a
              class="rounded transition border-1 py-[4px] px-[12px] h-[32px] flex items-center justify-center gap-[8px]  text-button-primary-default-label-colour-light dark:text-button-primary-default-label-colour-dark hover:bg-button-primary-hover-bg-colour-light dark:hover:bg-button-primary-hover-bg-colour-dark hover:text-button-primary-hover-label-colour-light dark:hover:text-button-primary-hover-label-colour-dark focus:outline-[#2EB8E6] dark:focus:outline-[#FFFF00] bg-button-primary-default-bg-colour-light dark:bg-button-primary-default-bg-colour-dark border-none  text-button-label-font font-button-label-font font-button-label-font-weight tracking-button-label-font leading-button-label-font"
              href="/eligibility"
            >
              Verify your eligibility
            </a>
          </div>
        </div>
      </div>
      <div
        class="flex items-start  tablet:items-center"
      >
        <button
          aria-label="Close"
          class="content-center text-center rounded-full text-colour-onSurface-subtle-light dark:text-colour-onSurface-subtle-dark"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-xmark text-[20px]"
            data-icon="xmark"
            data-prefix="far"
            focusable="false"
            role="img"
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
